mudando a cor da home e adicionando novos nomes no arquivo de nomes

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testando o git</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div>
         <h1>Aprendendo GIT</h1>
         <h2>Adicionando novo texto!</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime sint excepturi quam vel corporis officia et exercitationem nesciunt, earum ratione quas dolorem possimus eius, iusto nam, quaerat animi? Assumenda, repellendus?</p>
     </div>
 </body>
 </html>
